[package]
name = "bntree"
version = "0.2.7"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Immutable B*-tree like data structure with layout heavily optimized for sequential access"
repository = "https://github.com/swizard0/bntree"
edition = "2018"

[dependencies]
bincode = "^1.2"
serde = "^1.0"
serde_derive = "^1.0"
